--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To My Website!</div>
-        <div class="intro-heading text-uppercase">I am Jason Duo Li. It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-lead-in">I am Jason Duo Li!</div>
+        <div class="intro-heading text-uppercase">Welcome to my website</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell me more</a>
       </div>
     </div>
   </header>
@@ -73,7 +73,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Services</h2>
+          <h2 class="section-heading text-uppercase">employment</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
